feat: bring in tailwind

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
     <body>
-        <h1>Hello</h1>
+        <h1 class="text-xl">Hello</h1>
     </body>
 </html>
