feat: static css files

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>Weather</title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="stylesheet" href="/css/index.css">
     </head>
     <body>
         <h1 class="text-xl">Hello</h1>
