--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
         <link rel="stylesheet" href="/css/index.css">
     </head>
     <body>
-        <h1 class="text-xl">Hello</h1>
+        {{ template "Navbar" . }}
+
+        <script src="/js/darkMode.js"></script>
     </body>
 </html>
