feat: toggle mobile menu

--- a/public/index.html
+++ b/public/index.html
@@ -13,5 +13,6 @@
     <body>
         {{ template "Navbar" . }}
         <script src="/js/darkMode.js"></script>
+        <script src="/js/mobileMenu.js"></script>
     </body>
 </html>
