feat: sign in route

--- a/public/navbar.html
+++ b/public/navbar.html
@@ -1,6 +1,6 @@
 {{ define "Navbar" }}
 <header>
-    <nav class="bg-gray-800">
+    <nav class="bg-gray-800" hx-boost="true">
         <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
             <div class="relative flex h-16 items-center justify-between">
                 <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
@@ -46,16 +46,34 @@
                     </div>
                     <div class="hidden sm:ml-6 sm:block">
                         <div class="flex space-x-4">
-                            <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
+                            {{ if eq .Route "root" }}
                             <a href="/"
-                                class="bg-gray-900 text-white rounded-md px-3 py-2 text-sm font-medium"
-                                aria-current="page">
+                                class="bg-gray-900 text-white rounded-md px-3 py-2 text-sm font-medium">
                                 Home
                             </a>
-                            <a href="/"
+                            <a href="/signin"
                                 class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium">
                                 Sign in
                             </a>
+                            {{ else if eq .Route "signin" }}
+                            <a href="/"
+                                class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium">
+                                Home
+                            </a>
+                            <a href="/signin"
+                                class="bg-gray-900 text-white rounded-md px-3 py-2 text-sm font-medium">
+                                Sign in
+                            </a>
+                            {{ else }}
+                            <a href="/"
+                                class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium">
+                                Home
+                            </a>
+                            <a href="/signin"
+                                class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium">
+                                Sign in
+                            </a>
+                            {{ end }}
                         </div>
                     </div>
                 </div>
@@ -80,16 +98,37 @@
         <!-- Mobile menu, show/hide based on menu state. -->
         <div class="hidden" id="mobile-menu">
             <div class="space-y-1 px-2 pb-3 pt-2">
-                <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
+                {{ if eq .Route "root" }}
                 <a href="/"
                     class="bg-gray-900 text-white block rounded-md px-3 py-2 text-base font-medium"
                     aria-current="page">
                     Home
                 </a>
-                <a href="/"
+                <a href="/signin"
                     class="text-gray-300 hover:bg-gray-700 hover:text-white block rounded-md px-3 py-2 text-base font-medium">
                     Sign In
                 </a>
+                {{ else if eq .Route "signin" }}
+                <a href="/"
+                    class="text-gray-300 hover:bg-gray-700 hover:text-white block rounded-md px-3 py-2 text-base font-medium"
+                    aria-current="page">
+                    Home
+                </a>
+                <a href="/signin"
+                    class="bg-gray-900 text-white block rounded-md px-3 py-2 text-base font-medium">
+                    Sign In
+                </a>
+                {{ else }}
+                <a href="/"
+                    class="text-gray-300 hover:bg-gray-700 hover:text-white block rounded-md px-3 py-2 text-base font-medium"
+                    aria-current="page">
+                    Home
+                </a>
+                <a href="/signin"
+                    class="text-gray-300 hover:bg-gray-700 hover:text-white block rounded-md px-3 py-2 text-base font-medium">
+                    Sign In
+                </a>
+                {{ end }}
             </div>
         </div>
     </nav>
