--- a/public/signin.html
+++ b/public/signin.html
@@ -13,6 +13,11 @@
     </head>
     <body class="dark:bg-gray-700 h-full">
         {{ template "Navbar" . }}
+        <main>
+            <article>
+                <h1 class="text-xl">Hello</h1>
+            </article>
+        </main>
         <script src="/js/darkMode.js"></script>
         <script src="/js/mobileMenu.js"></script>
     </body>
