feat: sign in page

--- a/public/signin.html
+++ b/public/signin.html
@@ -13,9 +13,42 @@
     </head>
     <body class="dark:bg-gray-700 h-full">
         {{ template "Navbar" . }}
-        <main>
-            <article>
-                <h1 class="text-xl">Hello</h1>
+        <main hx-target="this" class="flex items-center justify-center pt-16">
+            <article class="w-full max-w-xs">
+                <form hx-post="/signin" hx-swap="outerHTML" class="bg-white dark:bg-gray-800 shadow-md rounded px-8 pt-6 pb-8 mb-4">
+                    <div class="mb-4">
+                        <label class="block text-gray-700 dark:text-white text-sm font-bold mb-2" for="username">
+                            Username
+                        </label>
+                        <input id="username" name="username" type="text" placeholder="username"
+                        class="dark:bg-gray-700
+                        shadow appearance-none
+                        border dark:border-gray-800
+                        rounded w-full py-2 px-3
+                        text-gray-700 dark:text-gray-300
+                        leading-tight">
+                    </div>
+                    <div class="mb-6">
+                        <label class="block text-gray-700 dark:text-white text-sm font-bold mb-2" for="password">
+                            Password
+                        </label>
+                        <input id="password" name="password" type="password" placeholder="******************"
+                        class="dark:bg-gray-700
+                        shadow appearance-none
+                        border dark:border-gray-800
+                        rounded w-full py-2 px-3
+                        text-gray-700 dark:text-gray-300
+                        leading-tight">
+                    </div>
+                    <div class="flex items-center justify-center">
+                        <button
+                            class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded
+                            focus:outline-none focus:shadow-outline">
+                            Sign In
+                        </button>
+                        <img class="htmx-indicator" width="20px" height="20px" src="/assets/spinner.gif" alt="loading...">
+                    </div>
+                </form>
             </article>
         </main>
         <script src="/js/darkMode.js"></script>
