--- a/public/signup.html
+++ b/public/signup.html
@@ -15,12 +15,36 @@
         {{ template "Navbar" . }}
         <main class="flex items-center justify-center pt-16">
             <article class="w-full max-w-xs">
-                <form hx-post="/signin" hx-swap="outerHTML" class="bg-white dark:bg-gray-800 shadow-md rounded px-8 pt-6 pb-8 mb-4">
+                <form hx-post="/signup" hx-swap="outerHTML" class="bg-white dark:bg-gray-800 shadow-md rounded px-8 pt-6 pb-8 mb-4">
                     <div class="mb-4">
                         <label class="block text-gray-700 dark:text-white text-sm font-bold mb-2" for="username">
                             Username
                         </label>
                         <input id="username" name="username" type="text" placeholder="username"
+                        class="dark:bg-gray-700
+                        shadow appearance-none
+                        border dark:border-gray-800
+                        rounded w-full py-2 px-3
+                        text-gray-700 dark:text-gray-300
+                        leading-tight">
+                    </div>
+                    <div class="mb-4">
+                        <label class="block text-gray-700 dark:text-white text-sm font-bold mb-2" for="firstname">
+                            First Name
+                        </label>
+                        <input id="firstname" name="firstname" type="text" placeholder="first name"
+                        class="dark:bg-gray-700
+                        shadow appearance-none
+                        border dark:border-gray-800
+                        rounded w-full py-2 px-3
+                        text-gray-700 dark:text-gray-300
+                        leading-tight">
+                    </div>
+                    <div class="mb-4">
+                        <label class="block text-gray-700 dark:text-white text-sm font-bold mb-2" for="lastname">
+                            Last Name
+                        </label>
+                        <input id="lastname" name="lastname" type="text" placeholder="last name"
                         class="dark:bg-gray-700
                         shadow appearance-none
                         border dark:border-gray-800
@@ -40,14 +64,26 @@
                         text-gray-700 dark:text-gray-300
                         leading-tight">
                     </div>
+                    <div class="mb-6">
+                        <label class="block text-gray-700 dark:text-white text-sm font-bold mb-2" for="repeat-password">
+                            Repeat Password
+                        </label>
+                        <input id="repeat-password" name="repeat-password" type="password" placeholder="******************"
+                        class="dark:bg-gray-700
+                        shadow appearance-none
+                        border dark:border-gray-800
+                        rounded w-full py-2 px-3
+                        text-gray-700 dark:text-gray-300
+                        leading-tight">
+                    </div>
                     <div class="flex flex-col items-center justify-center gap-3">
                         <button
                             class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded
                             focus:outline-none focus:shadow-outline">
-                            Sign In
+                            Sign Up
                         </button>
                         <div>
-                            <p class="dark:text-white text-lg">Don't have an account? <a hx-boost="true" class="text-blue-500 underline" href="/signup">sign up</a></p>
+                            <p class="dark:text-white text-lg">Already have an account? <a hx-boost="true" class="text-blue-500 underline" href="/signin">sign in</a></p>
                         </div>
                         <img class="htmx-indicator" width="20px" height="20px" src="/assets/spinner.gif" alt="loading...">
                     </div>
