--- a/public/home.html
+++ b/public/home.html
@@ -12,6 +12,7 @@
         <script src="https://unpkg.com/htmx.org@1.9.10"></script>
     </head>
     <body class="dark:bg-gray-700 h-full">
+        {{ template "HomeNavbar" . }}
         <h1 class="text-xl dark:text-white">Home</h1>
         <script src="/js/darkMode.js"></script>
     </body>
