feat: make mobile menu work

--- a/public/home.html
+++ b/public/home.html
@@ -15,5 +15,6 @@
         {{ template "HomeNavbar" . }}
         <h1 class="text-xl dark:text-white">Home</h1>
         <script src="/js/darkMode.js"></script>
+        <script src="/js/mobileMenu.js"></script>
     </body>
 </html>
