feat: basic me page

--- a/public/home-navbar.html
+++ b/public/home-navbar.html
@@ -51,6 +51,23 @@
                                 class="bg-gray-900 text-white rounded-md px-3 py-2 text-sm font-medium">
                                 Home
                             </a>
+                            <a href="/me"
+                                class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium">
+                                Me
+                            </a>
+                            <button hx-post="/signout"
+                                class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium">
+                                Sign out
+                            </button>
+                            {{ else if eq .Route "me" }}
+                            <a href="/home"
+                                class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium">
+                                Home
+                            </a>
+                            <a href="/me"
+                                class="bg-gray-900 text-white rounded-md px-3 py-2 text-sm font-medium">
+                                Me
+                            </a>
                             <button hx-post="/signout"
                                 class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium">
                                 Sign out
@@ -59,6 +76,10 @@
                             <a href="/home"
                                 class="bg-gray-900 text-white rounded-md px-3 py-2 text-sm font-medium">
                                 Home
+                            </a>
+                            <a href="/me"
+                                class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium">
+                                Me
                             </a>
                             <button hx-post="/signout"
                                 class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium">
