--- a/public/home-navbar.html
+++ b/public/home-navbar.html
@@ -112,21 +112,45 @@
             <div class="space-y-1 px-2 pb-3 pt-2">
                 {{ if eq .Route "home" }}
                 <a href="/home"
-                    class="bg-gray-900 text-white rounded-md px-3 py-2 text-sm font-medium">
+                    class="bg-gray-900 text-white block rounded-md px-3 py-2 text-base font-medium"
+                    aria-current="page">
                     Home
+                </a>
+                <a href="/me"
+                    class="text-gray-300 hover:bg-gray-700 hover:text-white block rounded-md px-3 py-2 text-base font-medium">
+                    Me
                 </a>
                 <button hx-post="/signout"
                     class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium">
-                    Sign out
+                    Sign Out
+                </button>
+                {{ else if eq .Route "me" }}
+                <a href="/home"
+                    class="text-gray-300 hover:bg-gray-700 hover:text-white block rounded-md px-3 py-2 text-base font-medium"
+                    aria-current="page">
+                    Home
+                </a>
+                <a href="/me"
+                    class="bg-gray-900 text-white block rounded-md px-3 py-2 text-base font-medium">
+                    Me
+                </a>
+                <button hx-post="/signout"
+                    class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium">
+                    Sign Out
                 </button>
                 {{ else }}
                 <a href="/home"
-                    class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium">
+                    class="text-gray-300 hover:bg-gray-700 hover:text-white block rounded-md px-3 py-2 text-base font-medium"
+                    aria-current="page">
                     Home
+                </a>
+                <a href="/me"
+                    class="text-gray-300 hover:bg-gray-700 hover:text-white block rounded-md px-3 py-2 text-base font-medium">
+                    Me
                 </a>
                 <button hx-post="/signout"
                     class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium">
-                    Sign out
+                    Sign Out
                 </button>
                 {{ end }}
             </div>
