feat: require email in signup

--- a/public/signup.html
+++ b/public/signup.html
@@ -29,10 +29,22 @@
                         leading-tight">
                     </div>
                     <div class="mb-4">
+                        <label class="block text-gray-700 dark:text-white text-sm font-bold mb-2" for="email">
+                            Email
+                        </label>
+                        <input id="email" name="email" type="email" placeholder="example@example.com"
+                        class="dark:bg-gray-700
+                        shadow appearance-none
+                        border dark:border-gray-800
+                        rounded w-full py-2 px-3
+                        text-gray-700 dark:text-gray-300
+                        leading-tight">
+                    </div>
+                    <div class="mb-4">
                         <label class="block text-gray-700 dark:text-white text-sm font-bold mb-2" for="firstname">
                             First Name
                         </label>
-                        <input id="firstname" name="firstname" type="text" placeholder="first name"
+                        <input id="firstname" name="firstname" type="text" placeholder="Jon"
                         class="dark:bg-gray-700
                         shadow appearance-none
                         border dark:border-gray-800
@@ -44,7 +56,7 @@
                         <label class="block text-gray-700 dark:text-white text-sm font-bold mb-2" for="lastname">
                             Last Name
                         </label>
-                        <input id="lastname" name="lastname" type="text" placeholder="last name"
+                        <input id="lastname" name="lastname" type="text" placeholder="Snow"
                         class="dark:bg-gray-700
                         shadow appearance-none
                         border dark:border-gray-800
