--- a/public/me.html
+++ b/public/me.html
@@ -17,6 +17,7 @@
             <article class="flex items-center justify-center w-full">
                 <div class="block max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
                     <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">{{ .User.Username }}</h5>
+                    <p class="font-normal text-gray-700 dark:text-gray-400">email: {{ .User.Email }}</p>
                     <p class="font-normal text-gray-700 dark:text-gray-400">first name: {{ .User.FirstName }}</p>
                     <p class="font-normal text-gray-700 dark:text-gray-400">last name: {{ .User.FirstName }}</p>
                 </div>
