feat: nicer app

--- a/public/home-navbar.html
+++ b/public/home-navbar.html
@@ -74,7 +74,7 @@
                             </button>
                             {{ else }}
                             <a href="/home"
-                                class="bg-gray-900 text-white rounded-md px-3 py-2 text-sm font-medium">
+                                class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium">
                                 Home
                             </a>
                             <a href="/me"
