--- a/public/home.html
+++ b/public/home.html
@@ -36,6 +36,7 @@
                             hx-get="/city-autocomplete"
                             hx-target="#search-autocomplete"
                             hx-trigger="keyup"
+                            hx-swap="outerHTML"
                             class="block w-full
                             p-4 ps-10
                             text-sm text-gray-900
