feat: don't cause layout shift when searching

--- a/public/search-autocomplete.html
+++ b/public/search-autocomplete.html
@@ -1,9 +1,10 @@
 {{ if eq .Len 0 }}
-<div id="search-autocomplete" class="max-w-md mx-auto">
+<div id="search-autocomplete">
 </div>
 {{ else }}
 <div id="search-autocomplete"
-    class="max-w-md mx-auto
+    class="absolute left-0 right-0 ml-auto mr-auto
+    max-w-md w-full
     px-8 pt-6 pb-8 mb-4
     bg-white dark:bg-gray-800
     dark:text-white
