--- a/public/search.html
+++ b/public/search.html
@@ -63,7 +63,7 @@
                         </div>
                     </form>
                 </div>
-                <div id="search-autocomplete" class="max-w-md mx-auto">
+                <div id="search-autocomplete">
                 </div>
                 <div class="flex flex-col items-center justify-center">
                     <div class="py-3">
